[tool.poetry]
name = "orbital"
version = "0.1.0"
description = ""
authors = ["Mathew Vaughan <vaughanmathew@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.90.1"
uvicorn = "^0.20.0"
pytest = "^7.2.1"
httpx = "^0.23.3"
fastapi-pagination = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
